--- a/package.json
+++ b/package.json
@@ -13,11 +13,22 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "@uiw/react-md-editor": "^3.6.0",
+    "@zeit/next-css": "^1.0.1",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.4",
+    "gray-matter": "^4.0.3",
+    "marked": "^4.2.12",
     "next": "13.1.4",
+    "next-remove-imports": "^1.0.8",
+    "prettier": "^2.8.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "remark": "^14.0.2",
+    "remark-html": "^15.0.1",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "@types/marked": "^4.0.8"
   }
 }
